--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -92,14 +92,13 @@ input::-webkit-inner-spin-button {
 .message-success {
      color: green;
      font-weight: bold;
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
 }
 
-/*
-input[readonly]{
-  border-color: darkgrey;
-  border-style: solid;
-  border-width: 1px;
-  background-color: rgb(235, 235, 228);
-  color: rgb(84, 84, 84);
-  padding: 2px 0px;
-}
+
+
+
