--- a/app/templates/admin/hoadon.html
+++ b/app/templates/admin/hoadon.html
@@ -22,13 +22,13 @@
                     <path d="M8.5 4.5a.5.5 0 0 0-1 0v.634l-.549-.317a.5.5 0 1 0-.5.866L7 6l-.549.317a.5.5 0 1 0 .5.866l.549-.317V7.5a.5.5 0 1 0 1 0v-.634l.549.317a.5.5 0 1 0 .5-.866L9 6l.549-.317a.5.5 0 1 0-.5-.866l-.549.317V4.5zM5.5 9a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 2a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"></path>
                     <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"></path>
                 </svg>
-                <form action="post" action="/hoadon">
+                <div>
                     <p class="pt-0 font-weight-bold">Chọn ngày:</p>
                     <div class="justify-content-center d-flex center">
-                        <input type="date" name="datepicker" id="chonngay">
+                        <input type="date" name="datepicker" value="{{ngayhientai}}" id="chonngay2">
                         <button class="btn btn-primary ml-3" onclick="handleChon2()">Chọn</button>
                     </div>
-                </form>
+                </div>
             </div>
 
         </div>
@@ -45,13 +45,13 @@
             <table class="table table-striped table-borderless auto-index">
                 <thead style="background-color:#84B0CA ;" class="text-white">
                 <tr>
-                    <th scope="col" class="text-center">STT</th>
+                    <th scope="col" class="text-center">ID</th>
                     <th scope="col" class="text-center">Ngày khám</th>
                     <th scope="col" class="text-center">Giá tiền khám</th>
                     <th scope="col" class="text-center">Họ tên</th>
                     <th scope="col" class="text-center">Giới tính</th>
                     <th scope="col" class="text-center">Ngày sinh</th>
-                    <th scope="col" class="text-center">Số tiền</th>
+                    <th scope="col" class="text-center">Giá tiền thuốc</th>
                     <th scope="col" class="text-center">Thanh toán</th>
                     <!--                    <th scope="col" class="text-center"></th>-->
                 </tr>
@@ -72,24 +72,11 @@
                                 class="d-flex justify-content-center btn btn-danger thanh-toan-btn"
                                 data-toggle="modal"
                                 data-target="#exampleModal"
-                                data-id="{{ h.id }}"
-                                data-ten="{{ h.ten }}"
-                                data-sdt="{{ h.sdt }}"
-                                data-giatienkham = "{{ h['gia_kham'] }}"
-                                data-value="{{ h.value }}"
-                                data-ngaysinh="{{ h.ngaysinh }}"
-                                data-ngaykham="{{ h.ngaykham }}">
+                                onclick="load_chitiethoadon({{h.id}})">
                             CHƯA THANH TOÁN
                         </button>
                         {% else %}
-                        <button
-                                class="d-flex justify-content-center btn btn-success thanh-toan-btn"
-                                data-id="{{h.id}}"
-                                data-ten="{{h.ten}}"
-                                data-sdt="{{h.sdt}}"
-                                data-value="{{h.value}}"
-                                data-ngaysinh="{{h.ngaysinh}}"
-                                data-ngaykham="{{h.ngaykham}}">
+                        <button class="d-flex justify-content-center btn btn-success thanh-toan-btn" disabled>
                             ĐÃ THANH TOÁN
                         </button>
                         {% endif %}
@@ -116,47 +103,77 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body row d-flex align-items-baseline">
-                            <div class="col-xl-6">
-                                <div class="form-group">
-                                    <label>Mã hóa đơn:</label>
-                                    <div class="text-light p-2 bg-info font-weight-normal" id="modal-mahoadon"></div>
+                        <div class="modal-body">
+                            <div class="row d-flex align-items-baseline mb-2">
+                                <div class="col-xl-6">
+                                    <div class="form-group">
+                                        <label>Mã hóa đơn:</label>
+                                        <div class="text-light p-2 bg-info font-weight-normal rounded"
+                                             id="modal-mahoadon"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Tên khách hàng:</label>
+                                        <div class="text-light p-2 bg-info font-weight-normal rounded"
+                                             id="modal-tenkhachhang"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Số điện thoại:</label>
+                                        <div class="text-light p-2 bg-info font-weight-normal rounded"
+                                             id="modal-sdt"></div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label>Tên khách hàng:</label>
-                                    <div class="text-light p-2 bg-info font-weight-normal"
-                                         id="modal-tenkhachhang"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Số điện thoại:</label>
-                                    <div class="text-light p-2 bg-info font-weight-normal" id="modal-sdt"></div>
+                                <div class="col-xl-6">
+                                    <div class="form-group">
+                                        <label>Tổng hóa đơn:</label>
+                                        <div class="text-light p-2 bg-info font-weight-normal rounded"
+                                             id="modal-tongtien"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Ngày sinh:</label>
+                                        <div class="text-light p-2 bg-info font-weight-normal rounded"
+                                             id="modal-ngaysinh"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Ngày khám:</label>
+                                        <div class="text-light p-2 bg-info font-weight-normal rounded"
+                                             id="modal-ngaykham"></div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-xl-6">
-                                <div class="form-group">
-                                    <label>Tổng hóa đơn:</label>
-                                    <div class="text-light p-2 bg-info font-weight-normal" id="modal-tongtien"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Ngày sinh:</label>
-                                    <div class="text-light p-2 bg-info font-weight-normal" id="modal-ngaysinh"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Ngày khám:</label>
-                                    <div class="text-light p-2 bg-info font-weight-normal" id="modal-ngaykham"></div>
-                                </div>
+
+                            <div class="row d-flex align-items-baseline">
+                                <table class="table table-striped table-borderless auto-index">
+                                    <thead style="background-color:#84B0CA ;" class="text-white">
+                                    <tr>
+                                        <th scope="col" class="text-center">STT</th>
+                                        <th scope="col" class="text-center">Tên thuốc/dịch vụ</th>
+                                        <th scope="col" class="text-center">Số lượng</th>
+                                        <th scope="col" class="text-center">Đơn giá</th>
+                                        <th scope="col" class="text-center">Tổng cộng</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="tableBody">
+                                    <tr>
+                                        <td class="text-center">1</td>
+                                        <td class="text-center"></td>
+                                        <td class="text-center"></td>
+                                        <td class="text-center"></td>
+                                        <td class="text-center"></td>
+                                        <td class="text-center"></td>
+                                        <td class="text-center"></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
+
                         </div>
                         <div class="modal-footer">
-                            <div class="col-xl-9 d-flex justify-content-center">
-                                <button type="button" class="btn btn-secondary mr-4" data-dismiss="modal">Thanh toán tại
-                                    quầy
-                                </button>
-                                <button type="button" class="btn btn-primary">Thanh toán qua MOMO</button>
+                            <div class="col-xl-3 d-flex justify-content-start">
+                                <button type="button" class="btn btn-secondary mr-2 btn-danger" data-dismiss="modal">Thoát</button>
                             </div>
-                            <div class="col-xl-3 d-flex justify-content-end">
-                                <button type="button" class="btn btn-secondary mr-2" data-dismiss="modal">Thoát</button>
-                                <button type="button" class="btn btn-primary">Lưu</button>
+                            <div class="col-xl-9 d-flex justify-content-end">
+                                <button type="button" class="btn btn-secondary mr-4" id="thanhtoanbtn" data-hoadonid="" onclick="confirmthanhtoan(this)">Thanh toán tại quầy</button>
+                                <button type="button" class="btn btn-primary">Thanh toán qua MOMO</button>
                             </div>
                         </div>
                     </div>
@@ -165,38 +182,8 @@
         </div>
     </div>
 </div>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-    const buttons = document.querySelectorAll(".thanh-toan-btn");
-
-    buttons.forEach(button => {
-        button.addEventListener("click", function () {
-            // Lấy dữ liệu từ các thuộc tính data-* trong nút
-            const hoadonId = button.getAttribute("data-id");
-            const ten = button.getAttribute("data-ten");
-            const sdt = button.getAttribute("data-sdt");
-
-            const ngaysinh = button.getAttribute("data-ngaysinh");
-            const ngaykham = button.getAttribute("data-ngaykham");
-
-            const value = parseFloat(button.getAttribute("data-value")); // Convert to number
-            const giatienkham = parseFloat(button.getAttribute("data-giatienkham"));
-            console.log(value)
-            console.log(giatienkham)
-
-            // Gán dữ liệu vào modal
-            document.querySelector("#exampleModalLabel").textContent = `Chi tiết hóa đơn #${hoadonId}`;
-            document.querySelector("#modal-mahoadon").textContent = hoadonId;
-            document.querySelector("#modal-tenkhachhang").textContent = ten;
-            document.querySelector("#modal-sdt").textContent = sdt;
-            document.querySelector("#modal-tongtien").textContent = (value + giatienkham).toLocaleString();;
-            document.querySelector("#modal-ngaysinh").textContent = ngaysinh;
-            document.querySelector("#modal-ngaykham").textContent = ngaykham;
-        });
-    });
-});
-</script>
 {% else %}
 {% endif %}
 {% endblock %}
