--- a/app/templates/admin/thongke.html
+++ b/app/templates/admin/thongke.html
@@ -3,8 +3,8 @@
 {%block body%}
 <h1 class="text-center text-info"> THỐNG KÊ BÁO CÁO QUẢN LÝ</h1>
 <br>
-<h3 class="text-info text-center ">THỐNG KÊ DOANH THU THEO THÁNG</h3>
-<div class="border-top border-dark">
+<h3 class="text-info text-center">THỐNG KÊ DOANH THU THEO THÁNG</h3>
+<div class="border-top border-dark mt-2">
     <form>
         <div class="row">
             <div class="form-group col-6">
@@ -69,7 +69,7 @@
 <br>
 <br>
 <h3 class="text-info text-center ">THỐNG KÊ TẦN SUẤT KHÁM THEO THÁNG</h3>
-<div class="border-top border-dark">
+<div class="border-top border-dark mt-2">
     <form>
         <div class="row">
             <div class="form-group col-6">
@@ -109,7 +109,7 @@
 
 <br>
 <h3 class="text-info text-center ">THỐNG KÊ SỬ DỤNG THUỐC THEO THÁNG</h3>
-<div class="border-top border-dark">
+<div class="border-top border-dark mt-2">
     <form>
         <div class="row">
             <div class="form-group col-6">
